# lox-vm

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt  bytecode.h  main.c  params.h  shared.c  shared.h
src/chunk/: chunk.c  chunk.h  chunk_disassembler.c  chunk_disassembler.h
src/compiler/: bytecode.h  bytecode_compiler.c  bytecode_compiler.h  compilation_result.h  compiled_function.h  compiler.c  compiler.h  compiler_structs.c  compiler_structs.h  exported_symbol.c  exported_symbol.h  function_call.c  function_call.h  package.c  package.h  package_compiler.c  package_compiler.h  scanner.c  scanner.h
src/compiler/bytecode/: bytecode.c  bytecode.h  bytecode_compiler.c  bytecode_compiler.h  bytecode_list.c  bytecode_list.h  exported_symbol.c  exported_symbol.h  function_call.c  function_call.h  scanner.c  scanner.h
src/compiler/chunk/: chunk.c  chunk.h  chunk_disassembler.c  chunk_disassembler.h
src/compiler/inline/: call_graph.c  call_graph.h  call_graph_iterator.c  call_graph_iterator.h  function_inliner.c  function_inliner.h  function_inlliner.c  inliner.c  inliner.h
src/memory/: gc.c  gc.h  gc_info.c  gc_info.h  memory.c  memory.h  string_pool.c  string_pool.h
src/memory/gc/: gc.c  gc.h  gc_algorithm.h  gc_global_info.c  gc_global_info.h  gc_mark_sweep.c  gc_mark_sweep.h
src/runtime/: addition.c  print.c  runtime_panic.c  vm.c  vm.h
src/runtime/jit/: jit_compilation_result.c  jit_compilation_result.h  jit_compiler.c  jit_compiler.h  jit_compiler_arch.h  jit_info.c  jit_info.h
src/runtime/memory/: gc.c  gc.h  gc_algorithm.h  gc_mark_sweep.c  gc_mark_sweep.h  gc_result.c  gc_result.h  utils.c  utils.h
src/runtime/native/: native_functions.h
src/runtime/native_functions/: clock.c  force_gc.c  force_jit.c  join.c  native_function_definer.c  native_function_definer.h  self_thread_id.c  sleep.c
src/runtime/profiler/: profile_data.c  profile_data.h  profiler.c  profiler.h
src/runtime/threads/: monitor.c  monitor.h  vm_thread.c  vm_thread.h
src/shared/: package.c  package.h  string_pool.c  string_pool.h
src/shared/bytecode/: bytecode.c  bytecode.h  pending_jump_to_patch.c  pending_jump_to_patch.h  (+2 more)
src/table/: table.c  table.h
src/types/: array.c  array.h  array_object.c  array_object.h  function.c  function.h  function_object.h  native.c  native.h  native_object.h  package_object.c  package_object.h  string_object.c  string_object.h  struct_definition_object.c  struct_definition_object.h  struct_instance_object.c  struct_instance_object.h  struct_object.c  struct_object.h  types.c  types.h
src/utils/: stack_list.c  stack_list.h  substring.c  substring.h  table.c  table.h  trie.c  trie.h  utils.c  utils.h
src/vm/: native_functions.c  native_functions.h  vm.c  vm.h
tst/: CMakeLists.txt  compiler_test.h  hash_table_test.h  main.c  mark_bitmap_test.h  package_test.h  scanner_test.h  ssa_test.h  stack_test.h  table_test.h  test.h  tested.txt  trie_test.h  u64_hash_table_test.h  u8_hash_table.h  u8_set_test.h  utils_test.h  vm_inline_test.h  vm_jit_test.h  vm_test.h  vm_thread_id_pool_test.h  x64_jit_compiler_test.h  x86_jit_compiler_test.h
tst/jit/: lox_ir_creation_test.h  lox_ir_node_test.h
tst/resources/: ignore.txt  tmp
tst/ssa/: ssa_creation_test.h  ssa_node_test.h
(+300 files in other folders)
